--- a/Research_env/Perceptron Implementation.ipynb
+++ b/Research_env/Perceptron Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "07df77f9",
+   "id": "613b8ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6a42cfb",
+   "id": "8f03c002",
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "3fc0e0b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "plt.style.use(\"fivethirtyeight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbc9762b",
+   "metadata": {},
+   "source": [
+    "1e-4=10^-4,eta=learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "720715b0",
+   "id": "d03449f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perceptron:\n",
+    "    def __init__(self,eta:float=None,epochs:int=None):\n",
+    "        self.weights=np.random.randn(3)*1e-4\n",
+    "        self.eta=eta #learning rate\n",
+    "        self.epochs=epoch #iteration\n",
+    "    def fit(self,X,y):\n",
+    "        self.X=X\n",
+    "        self.y=y\n",
+    "        \n",
+    "        X_with_bias=np.c_[self.X,-np.ones(len(self.X),1)]\n",
+    "        print(f\"X with bias:\\n{X_with_bias}\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "493ba1c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acf4156",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b850260a",
    "metadata": {},
    "outputs": [],
    "source": []
