--- a/Research_env/Perceptron Implementation.ipynb
+++ b/Research_env/Perceptron Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "613b8ac6",
+   "id": "1b02932c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f03c002",
+   "id": "8417bd1f",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3fc0e0b6",
+   "id": "e6676884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc9762b",
+   "id": "759b6218",
    "metadata": {},
    "source": [
-    "1e-4=10^-4,eta=learning rate"
+    "1e-4=10^-4,\n",
+    "eta=learning rate,\n",
+    "underscore is hidden method thatswhy we're using(not some protective method though)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d03449f8",
+   "id": "c396e899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,19 +67,34 @@
     "        self.weights=np.random.randn(3)*1e-4\n",
     "        self.eta=eta #learning rate\n",
     "        self.epochs=epoch #iteration\n",
+    "    def _z_outcome(self,input,weights):\n",
+    "        return np.dot(input,wights)\n",
+    "    def activation_function(self,z):\n",
+    "        return np.where(z>0,1,0)\n",
     "    def fit(self,X,y):\n",
     "        self.X=X\n",
     "        self.y=y\n",
     "        \n",
     "        X_with_bias=np.c_[self.X,-np.ones(len(self.X),1)]\n",
     "        print(f\"X with bias:\\n{X_with_bias}\")\n",
-    "        "
+    "        \n",
+    "        for epoch in range(self.epochs):\n",
+    "            z=self._z_outcome(X_with_bias,self.weights)\n",
+    "            y_hat=self.activation_function(z)\n",
+    "            \n",
+    "            self.error=self.y-y_hat\n",
+    "            \n",
+    "            self.weights=self.weights+self.eta * np.dot(X_with_bias.T,self.error)\n",
+    "      \n",
+    "    def predict(self,X):\n",
+    "        X_with_bias=np.c_[X,-np.ones(len(self.X),1)]\n",
+    "        z=self._z_outcome(X_with_bias,self.weights)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493ba1c3",
+   "id": "0ffb237f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -85,15 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acf4156",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b850260a",
+   "id": "b8eac23c",
    "metadata": {},
    "outputs": [],
    "source": []
