--- a/Research_env/Perceptron Implementation.ipynb
+++ b/Research_env/Perceptron Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4aa4a2a0",
+   "id": "f2664a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e4cb465",
+   "id": "bfbbf70d",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6cfc951e",
+   "id": "d9f6b6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51088124",
+   "id": "3c304c68",
    "metadata": {},
    "source": [
     "1e-4=10^-4,\n",
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d73aa53b",
+   "execution_count": 29,
+   "id": "4894c68d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
     "        self.epochs=epochs #iteration\n",
     "        \n",
     "    def _z_outcome(self,input,weights):\n",
-    "        return np.dot(input,wights)\n",
+    "        return np.dot(input,weights)\n",
     "    \n",
     "    def activation_function(self,z):\n",
     "        return np.where(z>0,1,0)\n",
@@ -78,7 +78,7 @@
     "        self.X=X\n",
     "        self.y=y\n",
     "        \n",
-    "        X_with_bias=np.c_[self.X,-np.ones(len(self.X),1)]\n",
+    "        X_with_bias=np.c_[self.X,-np.ones((len(self.X),1))]\n",
     "        print(f\"X with bias:\\n{X_with_bias}\")\n",
     "        \n",
     "        for epoch in range(self.epochs):\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "38e495ba",
+   "id": "4bad3925",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7fa81a13",
+   "id": "ae0d4444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1218137f",
+   "id": "073e5930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5a0a7652",
+   "id": "bf7e01f4",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fcb45971",
+   "id": "59ad65e4",
    "metadata": {},
    "outputs": [
     {
@@ -310,21 +310,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "6c0700f0",
+   "execution_count": 30,
+   "id": "d0d3c5c3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot interpret '1' as a data type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/1g/qcssd9l567x0syxmsty3ftjh0000gn/T/ipykernel_3345/2495134245.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mEPOCHS\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_or\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPerceptron\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mETA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mEPOCHS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel_or\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/1g/qcssd9l567x0syxmsty3ftjh0000gn/T/ipykernel_3345/3239774441.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mX_with_bias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"X with bias:\\n{X_with_bias}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/Neuron/DL/Perceptron/env/lib/python3.7/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36mones\u001b[0;34m(shape, dtype, order, like)\u001b[0m\n\u001b[1;32m    202\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_ones_with_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlike\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlike\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 204\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    205\u001b[0m     \u001b[0mmultiarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopyto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcasting\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'unsafe'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot interpret '1' as a data type"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X with bias:\n",
+      "[[ 0.  0. -1.]\n",
+      " [ 0.  1. -1.]\n",
+      " [ 1.  0. -1.]\n",
+      " [ 1.  1. -1.]]\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 0 0 0]\n",
+      "error:\n",
+      "0    0\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:1/10:\n",
+      "[ 0.20001881  0.19994579 -0.29993842]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[1 1 1 1]\n",
+      "error:\n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:2/10:\n",
+      "[ 0.20001881  0.19994579 -0.19993842]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[1 1 1 1]\n",
+      "error:\n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:3/10:\n",
+      "[ 0.20001881  0.19994579 -0.09993842]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[1 1 1 1]\n",
+      "error:\n",
+      "0   -1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:4/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:5/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:6/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:7/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:8/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:9/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n",
+      "- -- -- -- -- -- -- -- -- -- -\n",
+      "predicted value after the forward pass:\n",
+      "[0 1 1 1]\n",
+      "error:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "Name: y, dtype: int64\n",
+      "updated weights after each epoch:10/10:\n",
+      "[2.00018808e-01 1.99945786e-01 6.15814324e-05]\n",
+      "####################\n"
      ]
     }
    ],
@@ -339,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9610eb9e",
+   "id": "e897b662",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -347,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381c0ca6",
+   "id": "7795d25f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69bd0f20",
+   "id": "eb7126e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -363,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5fdaa0c",
+   "id": "4e1464fd",
    "metadata": {},
    "outputs": [],
    "source": []
